Partial_14Dec2021/force-app/main/default/objects/Contacts__c/Contacts__c.object-meta.xml
<CustomObject>
    <label>Contacts.(O)</label>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contacts.(O)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>