Partial_14Dec2021/force-app/main/default/objects/Contacts__c/fields/Builder_grading__c.field-meta.xml
<CustomField>
    <fullName>Builder_grading__c</fullName>
    <label>Builder grading</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>