Partial_14Dec2021/force-app/main/default/objects/Contacts__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Distributor_Dealer__c.OwnerId</field>
            <operation>equals</operation>
            <valueField>$Source.OwnerId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Distributor_Dealer__c</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>