Partial_14Dec2021/force-app/main/default/objects/Contacts__c/fields/Owner_State__c.field-meta.xml
<CustomField>
    <fullName>Owner_State__c</fullName>
    <formula>CreatedBy.User_State__c</formula>
    <label>Owner State</label>
    <type>Text</type>
</CustomField>