Partial_14Dec2021/force-app/main/default/objects/Contacts__c/fields/ownerId__c.field-meta.xml
<CustomField>
    <fullName>ownerId__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ownerId</label>
    <type>Text</type>
</CustomField>