Partial_14Dec2021/force-app/main/default/objects/Contacts__c/fields/Parent_Distributor_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Distributor_Id__c</fullName>
    <formula>Distributor__r.Standard_Account_Link__c</formula>
    <label>Parent Distributor Id</label>
    <type>Text</type>
</CustomField>