Partial_14Dec2021/force-app/main/default/objects/Contacts__c/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <label>Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Most preferred brand</fullName>
            </value>
            <value>
                <fullName>Not Approved brand</fullName>
            </value>
            <value>
                <fullName>Not Approached by Ashirvad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>