Partial_14Dec2021/force-app/main/default/objects/Contacts__c/fields/Type1__c.field-meta.xml
<CustomField>
    <fullName>Type1__c</fullName>
    <formula>Type_Test__c</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>