Partial_14Dec2021/force-app/main/default/objects/Contacts__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Farmer</fullName>
            </value>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Mechanic</fullName>
            </value>
            <value>
                <fullName>Dealers Salesman</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Institution</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Purchase Manager</fullName>
            </value>
            <value>
                <fullName>Site Engineer</fullName>
            </value>
            <value>
                <fullName>Borewell Office</fullName>
            </value>
            <value>
                <fullName>plumbing contractor</fullName>
            </value>
            <value>
                <fullName>Borer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>