Partial_14Dec2021/force-app/main/default/objects/Contacts__c/fields/Type_Test__c.field-meta.xml
<CustomField>
    <fullName>Type_Test__c</fullName>
    <label>Type Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>