Partial_14Dec2021/force-app/main/default/objects/Contacts__c/fields/Unique_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Unique_Mobile__c</fullName>
    <label>Unique Mobile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>